@@ -119,6 +119,7 @@
             "ExtUtils::MakeMaker" : "0",
             "File::Spec" : "0",
             "Test::More" : "0.89",
+            "Test::Warnings" : "0",
             "perl" : "5.006"
          }
       }
