@@ -9,6 +9,7 @@ build_requires:
   ExtUtils::MakeMaker: '0'
   File::Spec: '0'
   Test::More: '0.89'
+  Test::Warnings: '0'
   perl: '5.006'
 configure_requires:
   ExtUtils::MakeMaker: '0'
