@@ -73,6 +73,7 @@
       "Test::More" : "1.001014",
       "Test::Pod" : "1.51",
       "Test::Pod::Coverage" : "1.10",
+      "Test::Warnings" : "0.021",
       "strict" : "1.09",
       "warnings" : "1.32"
    },
