@@ -104,6 +104,7 @@ do { my $x = {
                                    'ExtUtils::MakeMaker' => '0',
                                    'File::Spec' => '0',
                                    'Test::More' => '0.89',
+                                   'Test::Warnings' => '0',
                                    'perl' => '5.006'
                                  }
                  }
