@@ -14,6 +14,7 @@ my @files = (
     't/00-report-prereqs.dd',
     't/00-report-prereqs.t',
     't/array_nonmvp.t',
+    't/array_nonmvp_empty.t',
     't/basic.t',
     't/classic.t'
 );
